src/test/ui/borrowck/immutable-arg.stderr
error[E0384]: cannot assign to immutable argument `_x`
  --> $DIR/immutable-arg.rs:2:5
   |
LL | fn foo(_x: u32) {
   |        -- If I were you, I would simply make this binding mutable: `mut _x`
LL |     _x = 4;
   |     ^^^^^^ cannot assign to immutable argument

error: aborting due to previous error

For more information about this error, try `rustc --explain E0384`.
